--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -23,5 +23,9 @@
       "sign_in": "Sign In",
       "sign_up": "Register new user"
     }
+  },
+  "main_page": {
+    "search_label": "Search",
+    "search_placeholder": "Search"
   }
 }
