DORM-25 feat(addpage): add new student page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,12 +32,16 @@
   },
   "detail_page": {
     "title": "Student detail",
-    "first": "First name",
-    "last": "Last name",
     "id": "Student id",
     "date": "Registration date",
     "floor": "Floor",
     "room": "Room",
     "delete": "Delete"
+  },
+  "add_page": {
+    "title": "Add new student",
+    "first": "First name",
+    "last": "Last name",
+    "add": "Add"
   }
 }
