--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,8 @@
     "button": {
       "login": "Login",
       "back": "Back",
-      "register": "Register"
+      "register": "Register",
+      "logout": "Logout"
     },
     "error": {
       "password_do_not_match": "Passwords do not match!",
