DORM-36 feat(detail): add Update button adn function

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,7 +37,8 @@
     "date": "Registration date",
     "floor": "Floor",
     "room": "Room",
-    "delete": "Delete"
+    "delete": "Delete",
+    "update": "Update info"
   },
   "add_page": {
     "title": "Add new student",
