DORM-43 feat(detail): add inputs for changing student's information

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,8 @@
     "you": "You",
     "id": "Student id",
     "date": "Registration date",
+    "fname": "First name",
+    "lname": "Last name",
     "floor": "Floor",
     "room": "Room",
     "button": {
