DORM-43 refactor(detail): Add inputs for changing student's information

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -48,6 +48,7 @@
     "first": "First name",
     "last": "Last name",
     "floor": "Floor",
-    "room": "Room"
+    "room": "Room",
+    "worker": "Create worker"
   }
 }
