DORM-57 feat(detail): add provisions info

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -31,6 +31,14 @@
     "lname": "Last name",
     "floor": "Floor",
     "room": "Room",
+    "provisions": {
+      "title": "Student provisions",
+      "bedhseet": "Bedhseet",
+      "pillow": "Pillows",
+      "towel": "Towels",
+      "blanket": "Blankets",
+      "curtain": "Curtains"
+    },
     "button": {
       "delete": "Delete",
       "update": "Update info",
