DORM-56 feat(main): new main page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,6 +16,14 @@
     "title": "Sign In"
   },
   "main_page": {
+    "title": "Welcome to dorm",
+    "buttons": {
+      "students": "Students List",
+      "workers": "Workers List",
+      "rooms": "Rooms List"
+    }
+  },
+  "students_page": {
     "title": "Students",
     "search_label": "Search",
     "search_placeholder": "Search",
