DORM-62 feat(login): add Guest user

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,7 +10,8 @@
     },
     "button": {
       "login": "Login",
-      "logout": "logout"
+      "logout": "logout",
+      "guest": "Login as Guest"
     },
     "error": "Fields cannot be empty!",
     "title": "Sign In"
